--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -1,5 +1,9 @@
 ﻿@page "/"
+@using ChickenTinder.Client.Data
 @inject NavigationManager nav
+@inject ServerConnection _server;
+
+
 <div class="center-all">
     <img src="/icon-192.png" />
 </div>
@@ -19,6 +23,12 @@
 
 
 @code {
+
+    protected override async Task OnInitializedAsync()
+    {
+        //await _server.CreateRoom();
+    }
+
     private string? _code;
     public string? Code
     {
@@ -40,6 +50,6 @@
     public void Join()
     {
         //create the room...
-        nav.NavigateTo("/room");
+      //  nav.NavigateTo("/room");
     }
 }
