--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 @using ChickenTinder.Client.Data
 @inject NavigationManager nav
-
 @inject ServerConnection _server;
 
 
@@ -44,6 +43,6 @@
     public void Join()
     {
         //create the room...
-      //  nav.NavigateTo("/room");
+        nav.NavigateTo("/room");
     }
 }
