--- a/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
@@ -1,13 +1,16 @@
 ﻿@page "/room"
 @page "/room/{Id}"
 @page "/room/{Id}/join/{UserId}"
+@inject NavigationManager nav
 <h3>Room</h3>
-
+<button class="btn" @onclick="Start">Start</button>
 @code {
     [Parameter]
     public int UserId { get; set; }
     [Parameter]
     public int Id { get; set; }
-
-
+    public void Start()
+    {
+        nav.NavigateTo("/swipe");
+    }
 }
