--- a/ChickenTinder/ChickenTinder/Client/wwwroot/css/app.css
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/css/app.css
@@ -22,6 +22,10 @@ html, body {
     color: var(--textColor);
 }
 
+.checked {
+    color: var(--starColor);
+}
+
 .btn {
     background-color: var(--btnColor);
     color: var(--btnTextColor);
@@ -120,3 +124,4 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
