ServerConnection Fix... Again

--- a/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
@@ -15,7 +15,7 @@
         {
             <div class="tinder--card">
                 <h3 class="center-all">@item.Name</h3>
-                <img class="center-all" src="@item.ImageUrl" />
+                <img class="center-all" src="@item.Image_Url" />
                 @*<table>
                     <tr>
                         <td>@item.Review_Count Reviews</td>
