Template for the match page

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -1,21 +1,26 @@
 ﻿@page "/match"
 
-<div class="alert alert-success" role="alert">
-  It's a Match! <i class="fa-solid fa-party-horn"></i>
+<div class="alert alert-success text-center fa-2xl" role="alert">
+  It's a Match! <i class="fa-solid fa-champagne-glasses"></i>
 </div>
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Let's Eat'</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Great choice! Now do this!</h6>
-    <p class="card-text">
-        <i class="fa-solid fa-fork-knife"></i>
-        <i class="fa-solid fa-pot-food"></i>
-        <i class="fa-solid fa-mug-hot"></i>
-    </p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
-  </div>
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Let's Eat!</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Great choice! Now let's do this!</h6>
+                    <p class="card-text text-center">
+                        <i class="fa-solid fa-burger fa-2xl"></i> <i class="fa-solid fa-thumbs-up pe-3"></i>
+                        <i class="fa-solid fa-bowl-rice fa-2xl"></i> <i class="fa-solid fa-heart pe-3"></i>
+                        <i class="fa-solid fa-mug-hot fa-2xl"></i> <i class="fa-solid fa-thumbs-up pe-3"></i>
+                    </p>
+                    <button type="button" class="btn btn-primary">Get Directions</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @code {
