--- a/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor.css
+++ b/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor.css
@@ -152,3 +152,13 @@ body {
 .fa-remove {
     color: #CDD6DD;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+td {
+    padding: 5px;
+}
