--- a/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
@@ -1,10 +1,12 @@
 ﻿@page "/swipe/{Id}/join/{UserId}"
 @page "/swipe"
-<h3>Swipe</h3>
 
+<SwipeList>
+</SwipeList>
 @code {
     [Parameter]
     public int UserId { get; set; }
     [Parameter]
     public int Id { get; set; }
+
 }
