--- a/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
@@ -10,7 +10,7 @@
     @foreach (var user in server.Room.Users)
     {
         <li>
-            @user.Value.SignalRConnection
+            @user.SignalRConnection
         </li>
     }
 </ul>
