--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -1,4 +1,4 @@
-﻿@page "/match{roomid:int}"
+﻿@page "/match/{roomid:int}"
 @using ChickenTinder.Client.Data
 @using ChickenTinder.Shared.Models
 @inject ServerConnection ServerConnection
@@ -35,7 +35,7 @@
         if (ServerConnection.Room != null)
         {
             Room = ServerConnection.Room;
-            RestaurantName = Room.WinningRestaurant == null ? "" : Room.WinningRestaurant
+            //RestaurantName = Room.WinningRestaurant == null ? "" : Room.WinningRestaurant
         }        
     }
 }
