Added parameter for room ID

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -28,7 +28,8 @@
 
 @code {
     [Parameter]
-    public int RoomId { get; set; }
+    public int RoomID { get; set; }
+
     private DiningRoom Room { get; set; }
     private string RestaurantName { get; set; } = "";
 
