--- a/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
@@ -52,7 +52,10 @@
 
     public void Matched(string restaurantId)
     {
-        server.Room.WinningRestaurant = server.Room.GetRestaurant(restaurantId);
+        if (server.Room == null)
+            throw new Exception("");
+        server.Room.WinningRestaurant = server.Room.GetRestaurant(restaurantId) ?? throw new Exception("not found");
+        StateHasChanged();
         nav.NavigateTo($"/match/{server.Room.ID}");
     }
 
