--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -7,6 +7,8 @@
   It's a Match! <i class="fa-solid fa-champagne-glasses"></i>
 </div>
 
+<Card Restaurant="Room?.WinningRestaurant" />
+
 <div class="container text-center">
     <div class="row justify-content-center">
         <div class="col-8">
