--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -6,8 +6,11 @@
 <div class="alert alert-success text-center fa-2xl" role="alert">
   It's a Match! <i class="fa-solid fa-champagne-glasses"></i>
 </div>
-
-<Card Restaurant="Room?.WinningRestaurant" />
+<div class="pyro">
+  <div class="before"></div>
+    <Card Restaurant="Room?.WinningRestaurant" />
+  <div class="after"></div>
+</div>
 
 <div class="container text-center">
     <div class="row justify-content-center">
