--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -21,15 +21,24 @@ else
     <div class="alert alert-success text-center fa-2xl" role="alert">
         It's a Match! <i class="fa-solid fa-champagne-glasses"></i>
     </div>
-
-    <Card Restaurant="Room?.WinningRestaurant" />
-
     <div class="container text-center">
         <div class="row justify-content-center">
             <div class="col-8">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Let's Go to @RestaurantName!</h5>
+                        <h5 class="card-title">Restaurant Information</h5>
+                        <p class="card-text text-center">
+                            <Card Restaurant="Room?.WinningRestaurant" />
+                        </p>
+                    </div>
+                </div>                
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Let's Go to @RestaurantName.</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Great choice! Now let's do this!</h6>
                         <p class="card-text text-center">
                             <i class="fa-solid fa-burger fa-2xl"></i> <i class="fa-solid fa-thumbs-up pe-3"></i>
