--- a/ChickenTinder/ChickenTinder/Client/wwwroot/css/app.css
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/css/app.css
@@ -22,6 +22,15 @@ html, body {
     color: var(--textColor);
 }
 
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+
 .checked {
     color: var(--starColor);
 }
@@ -32,6 +41,15 @@ html, body {
     padding-left: 20px;
     padding-right: 20px;
     min-width: 100px;
+}
+
+.btn-small {
+    background-color: var(--btnColor);
+    color: var(--btnTextColor);
+    padding-left: 5px;
+    padding-right: 5px;
+    min-width: 0px;
+    margin: 5px;
 }
 
 ::placeholder {
@@ -60,6 +78,13 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer {
+    transform: translate(-50%,50%);
+    position: fixed;
+    bottom: 100px;
+    left: 50%;
 }
 
 h1 {
