--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -45,7 +45,7 @@ else
                             <i class="fa-solid fa-bowl-rice fa-2xl"></i> <i class="fa-solid fa-heart pe-3"></i>
                             <i class="fa-solid fa-mug-hot fa-2xl"></i> <i class="fa-solid fa-thumbs-up pe-3"></i>
                         </p>
-                        <button type="button" class="btn btn-primary" @onclick="GetDirections">Get Directions</button>
+                        <button type="button" class="btn" @onclick="GetDirections">Get Directions</button>
                     </div>
                 </div>
             </div>
