--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -5,21 +5,24 @@
 
 
 <div class="center-all">
-    <img src="/icon-192.png" />
+    <img src="/icon-192.png" style="margin-top: 20px" />
 </div>
-<h1 class="center-all">Chicken Tinder</h1>
+<h1 class="center-all" style="margin-top: 50px">Chicken Tinder</h1>
 <p class="center-all">Find Single Restaurants Near You</p>
 
-<div class="center-all">
-    <p>Host or Enter Code</p>
-</div>
-<div class="center-all">
-    <input class="textbox" placeholder="Code" @bind-value="@Code" />
-</div>
-<div class="center-bottom">
-    <button class="btn" @onclick="Join">@JoinText</button>
+<div class="footer">
+    <div class="center-all">
+        <p>Host or Enter Code</p>
+    </div>
+    <div class="center-all">
+        <input class="textbox" placeholder="Code" @bind-value="@Code" />
+    </div>
+    <div class="center-bottom">
+        <button class="btn" @onclick="Join">@JoinText</button>
 
+    </div>
 </div>
+
 
 @code {
     private string? _code;
