--- a/ChickenTinder/ChickenTinder/Client/Shared/Card.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/Card.razor
@@ -1,7 +1,7 @@
 ﻿@using ChickenTinder.Shared.Models
 <div>
     <p class="center">@Restaurant.Name</p>
-    <img src="@Restaurant.Image_Url" style="object-fit: fill; width: 192px; height: 192px" />
+    <img src="@Restaurant.Image_Url" draggable="false" class="unselectable card-image"  />
     <table class="table">
         <tr>
             <td style="text-align: left">@Restaurant.Review_Count Reviews</td>
