--- a/ChickenTinder/ChickenTinder/Client/Shared/Card.razor.css
+++ b/ChickenTinder/ChickenTinder/Client/Shared/Card.razor.css
@@ -1,7 +1,7 @@
 ﻿.card-image {
-    object-fit: fill;
-    width: 192px;
-    height: 192px;
+    object-fit: cover;
+    width: 100%;
+    height: 40vh;
 }
 
 .unselectable {
