Added the ability to launch maps from interloopservice

--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -4,6 +4,8 @@
 @inject ServerConnection _server;
 
 
+<a href="http://maps.apple.com/?ll=51.84,-8.30" target="_blank">Click here for map</a>
+
 <div class="center-all">
     <img src="/icon-192.png" style="margin-top: 20px" />
 </div>
